# fabric

./: .gitignore  Cargo.toml  README.md
addon/: Cargo.toml  example.wat
addon/src/: addon.rs  foreign.rs  lib.rs  logging.rs  manager.rs  module.rs
codegen/: Cargo.toml
codegen/src/: interface.rs  lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/backend/: mod.rs
runtime/src/backend/cranelift/: function.rs  mod.rs  module.rs  runtime.rs  signature.rs
