[package]
name = "fabric-runtime"
version = "0.1.0"
authors = ["l3ops <github@leops.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
anyhow = "1.0.33"
wat = "1.0.27"
bitfield = "0.13.2"

cranelift-wasm = "0.67.0"
cranelift-codegen = "0.67.0"
target-lexicon = "0.11.0"
cranelift-entity = "0.67.0"
cranelift-simplejit = "0.67.0"
cranelift-module = "0.67.0"
cranelift-native = "0.67.0"
